# encrypted_orderbook

./: .gitignore  Cargo.toml  README.md  generate_keys.sh  package-lock.json  package.json
elizaos_integration/: index.ts  orderbook_action.ts
landing/: demo-styles.css  demo.js  elizaos-demo.js  index.html  script.js  styles.css
marketing/: pitchdeck.tex
plugin-orderbook/: README.md  bun.lockb  package-lock.json  package.json
plugin-orderbook/src/: actions.ts  index.ts  service.ts
plugin-orderbook/src/actions/: addOrder.ts  config.ts  generateKeys.ts  getFills.ts  getOrders.ts  index.ts  marketBuy.ts  marketSell.ts  resetOrderbook.ts
src/: main.rs
src/api/: config.rs  mod.rs  orders.rs  reset.rs  types.rs
src/utils/: fhe_operations.rs  generate_key.rs  mod.rs  orderbook.rs  orders.rs
tests/: test_orderbook_api.js
