[package]
name = "fhe_orderbook"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full","test-util", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tfhe = { version = "0.5.1", features = ["boolean", "shortint", "integer", "seeder_unix"] }
tokio-rusqlite = "0.4.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
async-trait = "0.1.74"
once_cell = "1.18.0"