[package]
name = "fhe_orderbook"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
axum = { version = "0.6.20", features = ["macros"] }
tokio = { version = "1.32.0", features = ["full", "test-util", "macros"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tfhe = { version = "0.4.0", features = ["boolean", "shortint", "integer", "seeder_unix"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tokio-rusqlite = "0.4.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
async-trait = "0.1.74"
once_cell = "1.18.0"
bytemuck = "1.14.0"